--- a/AltairStudios.ApiDoc/templates/api/api-index.html
+++ b/AltairStudios.ApiDoc/templates/api/api-index.html
@@ -1,7 +1,6 @@
 <div class="row-fluid">
-	<div class="span12"><div id="container" style="width: 100%; height: 400px"></div></div>
-</div>
-<div class="row-fluid">
-	<div class="span6"><div id="containerPie1" style="width: 100%; height: 400px"></div></div>
-	<div class="span6"><div id="containerPie2" style="width: 100%; height: 400px"></div></div>
+	<h1>Class {class-name}</h1>
+	<h2>Fields</h2>
+	<h2>Properties</h2>
+	<h2>Methods</h2>
 </div>
