--- a/AltairStudios.ApiDoc/templates/master.html
+++ b/AltairStudios.ApiDoc/templates/master.html
@@ -48,7 +48,7 @@
 		</div>
 
 		<div class="container-fluid">
-			<div class="row-fluid" id="content">
+			<div class="row-fluid" id="content">{@content}</div>
 		</div>
 
 		<hr />
